--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="popup-info">
         <h2>Quiz Guide</h2>
         <span class="info">1.There are Five questions.</span>
-        <span class="info">2.Time alloted for each question is 10 seconds.</span>
+        <span class="info">2.No Time Limit.</span>
         <span class="info">3.For every correct answer you score a point.</span>
         <span class="info">4.There are no negative markings for incorrect answer.</span>
         <span class="info">5.Total points will show up at the end of the quiz.</span>
